# pew

./: Cargo.toml
.cargo/: config.toml
assets/shaders/: atmosphere.wgsl  custom_material_chromatic_aberration.wgsl  instancing.wgsl
crates/big_space/: Cargo.toml
crates/big_space/examples/: demo.rs  parenting.rs
crates/big_space/src/: debug.rs  lib.rs  precision.rs
crates/floating_origin/: Cargo.toml
crates/floating_origin/examples/: parenting.rs
crates/floating_origin/src/: lib.rs  precision.rs
crates/pew/: Cargo.toml
crates/pew/assets/models/earth/: Earth_1_12756.gltf
crates/pew/assets/models/moon/: Moon_1_3474.gltf
crates/pew/assets/models/saturn/: Saturn_1_120536.gltf
crates/pew/src/: camera.rs  main.rs  starfield.rs
src/: atmosphere.rs  body.rs  camera.rs  main.rs  notes.md  post_processing.rs  starfield.rs  sunlight.rs
