[workspace]
resolver = "2"
members = ["crates/*"]

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[package]
name = "pew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = [
    "bevy_render",
    "bevy_winit",
    "filesystem_watcher",
] }
big_space = { path = "./crates/big_space" }
bevy_framepace = { git = "https://github.com/aevyrie/bevy_framepace", branch = "main" }
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", branch = "main" }
bytemuck = "1"
rand = "0.8"

[patch."https://github.com/bevyengine/bevy"]
bevy = { git = "https://github.com/IceSentry/bevy", branch = "depth-prepass" }
